examples/errors/undefined-macro-argument.scpasm
org 0

macro my_macro(one)
	mov a,#<two>
endmacro
